MS-35: Refactor sessions components. Fix errors not showing in modal

--- a/src/Components/shared/Modal/modal.module.css
+++ b/src/Components/shared/Modal/modal.module.css
@@ -58,3 +58,7 @@
 .buttonModal button:hover {
   background-color: rgb(88, 88, 88);
 }
+.center {
+  display: flex;
+  justify-content: center;
+}
